Se ajustáron los fancycheckbox con la seleccion multiple con shift

--- a/css/sass/_forms.scss
+++ b/css/sass/_forms.scss
@@ -28,4 +28,10 @@
 	.input-group-addon .fa {
 		color: $divider-color;
 	}
+
+	
+}
+
+.checkbox input[type="checkbox"] {
+	display: block !important;
 }
