--- a/css/sass/_monitoring.scss
+++ b/css/sass/_monitoring.scss
@@ -41,6 +41,8 @@
 	}
 
 	.leads {
+			
+
 		.titles {
 			border-bottom: 1px solid $divider-color;
 
@@ -79,6 +81,8 @@
 			}
 		}
 		.lead {
+			
+			width: 100%;
 			border-bottom: $divider-color 1px dotted;
 			margin: 0;
 			display: inline-block;
