Mejoras en apariencia de elementos de formularios

--- a/css/sass/_monitoring.scss
+++ b/css/sass/_monitoring.scss
@@ -9,12 +9,12 @@
 	.mag-form {
 		display: inline-block;
 		width: 100%;
+		margin-bottom: 2rem;
 
 		.action-list,
 		.mag-date,
 		.mag-reminder,
-		.mag-reminder-btn {
-			padding-bottom: 1rem;
+		.mag-reminder-btn {			
 			max-width: 200px;
 			float: left;
 			margin-right: 1.5rem;
@@ -103,7 +103,7 @@
 			display: inline-block;
 
 			&:hover {
-				background: #efefef;
+				background: #FAFAFA;
 			}
 			p {
 				@media (max-width: 1000px) { margin: 0; }
@@ -122,6 +122,11 @@
 				margin: 0;
 				position: relative;
 
+				&:hover {
+					color: $accent-color;
+					.check-icon { color: $accent-color; }
+				}
+
 				@media (max-width: 1350px) { width: 20%; }
 				@media (max-width: 1300px) { width: 25%; }
 				@media (max-width: 800px) { width: 100%; }
@@ -129,21 +134,9 @@
 				.icons {
 					@include inline-box;
 					position: relative;
-				}
-				// La clase del checkbox
-				.lead-check {
-					z-index: 9;
-					position: relative;
-					opacity: 0;
-				}
-				// El icono que sustituye la apariencia del checkbox
-				.check-icon {
-					position: relative;
-					z-index: 0;
-					left: -1rem;
-				}
+				}				
 
-				.name {
+				.fancy-check {
 					@include inline-box;
 					font-weight: 400;
 					font-size: .95rem;
