--- a/css/sass/_forms.scss
+++ b/css/sass/_forms.scss
@@ -3,6 +3,7 @@
 /*------------------------------------------------*/
 .form {
 	
+	// BOTONES
 	.btn-primary.btn-fill {
 		color: $primary-color-text;
 		background: $accent-color;
@@ -18,15 +19,118 @@
 	.btn-primary {
 		color: $primary-color;
 		border-color: $primary-color;
+		background: none;
+
+		.caret {
+			border-top-color: $primary-color;
+		}
+	}
+	
+	/* Color del icono cuando está dentro de un input text*/
+	.input-group {
+		
+		.form-control {
+			border-right: #eee; 
+			box-shadow: none;
+		}
+		.input-group-addon {
+			color: $divider-color;
+			box-shadow: none;
+			background: none;
+		}
+	}
+	// DROPDOWN MENU
+	.dropdown-menu {
+		transform: scale(0);
+		transition: all 400ms;
+		margin: 0px;
+		padding: 0px;
+		border-radius: 10px;
+		display: block;
+		z-index: 9000;
+		position: absolute;
+		opacity: 0;
+		box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.125);
+		border-radius: 10px;
+		margin-top: 10px;
+	
+		// Triangulito del dropdown (usa before & after para conseguir el efecto)
+		&::before {
+		    border-bottom: 11px solid rgba(0, 0, 0, 0.2);
+		    border-left: 11px solid transparent;
+		    border-right: 11px solid transparent;
+		    content: "";
+		    display: inline-block;
+		    position: absolute;
+		    left: 12px;
+		    top: -11px;
+		}
+		&::after {
+		    border-bottom: 11px solid #FFF;
+		    border-left: 11px solid transparent;
+		    border-right: 11px solid transparent;
+		    content: "";
+		    display: inline-block;
+		    position: absolute;
+		    left: 12px;
+		    top: -10px;
+		}
+		// Mejora la apariencia de los elementos
+		& > li:first-child > a {
+		    border-top-left-radius: 10px;
+		    border-top-right-radius: 10px;
+		}
+		& > li > a {
+		    padding: 8px 16px;
+		    color: #333;
+		}
+		& > li:last-child > a {
+		    border-bottom-left-radius: 10px;
+		    border-bottom-right-radius: 10px;
+		}
+
 	}
 	/* botón abierto cuando es select */
-	.open .btn-primary {
+	.open > .btn-primary {
 		color: $primary-color;
 		border-color: $accent-color;
+		background: none;
 	}
-	/* Color del icono cuando está dentro de un input text*/
-	.input-group-addon .fa {
-		color: $divider-color;
+	.open > .dropdown-menu {
+		transform: scale(1);
+		transform-origin: 29px -50px 0px;
+		opacity: 1;
+	}
+
+	// CHECKBOX
+	.fancy-check {
+
+		.check {
+			z-index: 9;
+			position: relative;
+			opacity: 0;
+		}
+		// El icono que sustituye la apariencia del checkbox
+		.check-icon {
+			position: relative;
+			z-index: 0;
+			left: -1rem;
+			font-size: 1.15rem;
+			color: $divider-color;
+		}
+		.name {
+			position: relative;
+			left: -.5rem;
+		}
+		&:hover {
+			color: $accent-color;
+			.check-icon { color: $accent-color; }
+		}
+		.fa-check-square-o,  
+		.fa-check-square-o + .name {
+			color: $primary-color;
+		}
+
 	}
 
 }
