--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -13,6 +13,16 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	font-family: $main-font;
 }
+
+// Utilidades
+.u-loading {
+	position: absolute;
+	top: 20%;
+	left: 50%;
+	display: none;
+}
+
+// Contenido principal 
 .main {
 	font-family: $main-font;
 	vertical-align: text-bottom;
