--- a/css/sass/_forms.scss
+++ b/css/sass/_forms.scss
@@ -101,8 +101,8 @@
 		transform-origin: 29px -50px 0px;
 		opacity: 1;
 	}
-
-	// CHECKBOX
+	
+	// CHECKBOX 
 	.fancy-check {
 
 		.check {
@@ -132,6 +132,9 @@
 		}
 
 	}
-
+	// TEXT AREA
+	textarea.form-control {
+		resize: vertical !important;
+	}
 }
 
