--- a/css/sass/support/_data-mixins.scss
+++ b/css/sass/support/_data-mixins.scss
@@ -20,6 +20,15 @@ $secondary-text-color: #727272;
 $divider-color:        #B6B6B6;
 
 
+// $primary-color-dark:  #D32F2F;
+// $primary-color:        #F44336;
+// $primary-color-light:  #FFCDD2;
+// $primary-color-text:   #FFFFFF;
+// $accent-color:         #FF5722;
+// $primary-text-color:   #212121;
+// $secondary-text-color: #727272;
+// $divider-color:        #B6B6B6;
+
 $body-bg: #efefef;
 $header-bg: #fff;
 $footer-bg: #fff;
